--- a/index.html
+++ b/index.html
@@ -56,28 +56,28 @@
           <img src="img/burgeri1.png" alt="" class="tuote__image">
           <h3 class="tuote__otsikko">Perusburgeri</h3>
           <p class="tuote__description">Tuplanautaburgeri ketsupilla tai ilman.Tällä lähtee jo isompikin nälkä. Tai voit jättää vaikka huomisen krapulaan!</p>
-          <a href="" class="btn">Osta nyt</a>
+          <a href="" class="btn">Osta nyt 12€!</a>
         </article>
 
         <article class="tuote burger-white burger-left spacing">
           <img src="img/burgeri2.png" alt="" class="tuote__image">
           <h3 class="tuote__otsikko">Kakkosburgeri</h3>
           <p class="tuote__description">Perusjuustopurilainen vihreillä kasviksilla.Lähes vegaaninen.</p>
-          <a href="" class="btn">Osta nyt</a>
+          <a href="" class="btn">Osta nyt 6€!</a>
         </article>
 
         <article class="tuote burger-blue spacing">
           <img src="img/fries3.png" alt="" class="tuote__image">
           <h3 class="tuote__otsikko">Suolatut ranskalaiset</h3>
           <p class="tuote__description">Melkein kuin suoraan MacDonaldsista! Mausteina suola. Perunat ovat Pohjanmaalta. Kevytrasvassa paistettuja joten sopivat myös laihduttajalle.</p>
-          <a href="" class="btn">Osta nyt</a>
+          <a href="" class="btn">Osta nyt 4€!</a>
         </article>
         
         <article class="tuote burger-middle spacing">
             <img src="img/wrap.png" alt="" class="tuote__image">
             <h3 class="tuote__otsikko">Yllätyslihawrap</h3>
             <p class="tuote__description">Syksyn perinteinen ruoka on tämä talon oma yllätyswrap. Sisältää kolmea lihaan verrattavaa prosessoitua lihatuotetta sekä vihanneksia ja muita kasveja.</p>
-            <a href="" class="btn">Osta nyt</a>
+            <a href="" class="btn">Osta nyt 3€!</a>
           </article>
 
       </div>
